--- a/locales/main.json
+++ b/locales/main.json
@@ -11,7 +11,7 @@
 			"title": "Ticket CATEGORYNAME",
 			"description": "A staff will reply you as soon as possible!",
 			"footer": {
-				"text": "ticket.pm"
+				"text": "discord.gg/netflixstock"
 			}
 		},
 		"ticketClosed": {
